Quick fix for pkl incompatability

--- a/CovidDashboard.ipynb
+++ b/CovidDashboard.ipynb
@@ -86,7 +86,7 @@
     "    )\n",
     "    return xl_df\n",
     "    \n",
-    "def wrangle_population_data(data):\n",
+    "def wrangle_population_data(xl_df):\n",
     "    \"\"\" Params: data - pd dataframe\n",
     "    Creates pkl file containing population data for each country in the UK by age and gender\n",
     "    from Office of National Statistics.\n",
@@ -119,7 +119,12 @@
     "\n",
     "    pop_by_age_df['total'] = pop_by_age_df['m_al'] + pop_by_age_df['f_al']\n",
     "    pop_by_age_df.rename(columns={'m_90': 'm_90+', 'f_90': 'f_90+'}, inplace=True)\n",
-    "    pop_by_age_df.to_pickle(\"popAge.pkl\")"
+    "    \n",
+    "    return pop_by_age_df\n",
+    "    \n",
+    "#     result = df.to_json(orient=\"table\")\n",
+    "#     parsed = json.loads(result)\n",
+    "#     pop_by_age_df.to_pickle(\"popAge.pkl\")"
    ]
   },
   {
@@ -135,7 +140,10 @@
     "# 2019 data sheet is the lastest data until mid 2021.\n",
     "# Data will be updated mid 2021 so need to remake pkl file using get_population_data()\n",
     "# Current file made from get_population_data('2019', range(2,423), 2)\n",
-    "pop_by_age_df = pd.read_pickle(\"popAge.pkl\")\n",
+    "\n",
+    "# pop_by_age_df = pd.read_pickle(\"popAge.pkl\") #not compatable with online version\n",
+    "age_data = get_population_data('2019', range(2,423), 2)\n",
+    "pop_by_age_df = wrangle_population_data(age_data)\n",
     "\n",
     "# Load JSON file containing data on Cases, Hospitalisations and Deaths\n",
     "with open(\"caseDeathHospitalisations.json\", \"rt\") as INFILE:\n",
@@ -473,7 +481,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2604196282fb4e20b53eaf1930d0b767",
+       "model_id": "7622d0cae50b4fe397727fc2055ec42d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -542,7 +550,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "212bafd5fd0048589f9c2c93ce50350f",
+       "model_id": "8fdcd67775ce4591b7fe21815af7241d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -617,7 +625,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "395e18e4e30147278f86171f62528f57",
+       "model_id": "7d959d407af6408bb973836c4d584491",
        "version_major": 2,
        "version_minor": 0
       },
