--- a/CovidDashboard.ipynb
+++ b/CovidDashboard.ipynb
@@ -119,12 +119,11 @@
     "\n",
     "    pop_by_age_df['total'] = pop_by_age_df['m_al'] + pop_by_age_df['f_al']\n",
     "    pop_by_age_df.rename(columns={'m_90': 'm_90+', 'f_90': 'f_90+'}, inplace=True)\n",
-    "    \n",
+    "    pop_by_age_df['country'] = xl_df.index\n",
+    "\n",
+    "    #pop_by_age_df.to_pickle(\"popAge.pkl\") #not compatable with online version\n",
     "    return pop_by_age_df\n",
-    "    \n",
-    "#     result = df.to_json(orient=\"table\")\n",
-    "#     parsed = json.loads(result)\n",
-    "#     pop_by_age_df.to_pickle(\"popAge.pkl\")"
+    "    \n"
    ]
   },
   {
@@ -141,9 +140,18 @@
     "# Data will be updated mid 2021 so need to remake pkl file using get_population_data()\n",
     "# Current file made from get_population_data('2019', range(2,423), 2)\n",
     "\n",
-    "# pop_by_age_df = pd.read_pickle(\"popAge.pkl\") #not compatable with online version\n",
-    "age_data = get_population_data('2019', range(2,423), 2)\n",
-    "pop_by_age_df = wrangle_population_data(age_data)\n",
+    "# pop_by_age_df = pd.read_pickle(\"popAge.pkl\") \n",
+    "# not compatable with online version : make new JSON\n",
+    "# age_data = get_population_data('2019', range(2,423), 2)\n",
+    "# pop_by_age_df = wrangle_population_data(age_data)\n",
+    "# result = pop_by_age_df.to_json(orient=\"records\")\n",
+    "# with open(\"popbyage.json\", \"wt\") as OUTF:\n",
+    "#     json.dump(result, OUTF)\n",
+    "\n",
+    "with open(\"popbyage.json\", \"rt\") as INFILE:\n",
+    "    agefile=json.load(INFILE);\n",
+    "    \n",
+    "pop_by_age_df = pd.read_json(agefile)\n",
     "\n",
     "# Load JSON file containing data on Cases, Hospitalisations and Deaths\n",
     "with open(\"caseDeathHospitalisations.json\", \"rt\") as INFILE:\n",
@@ -156,13 +164,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pop_by_age_df.set_index(\"country\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "countries = ['England','Northern Ireland','Scotland','Wales'];\n",
     "m_f = ['m', 'f']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -294,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,13 +492,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7622d0cae50b4fe397727fc2055ec42d",
+       "model_id": "f98489898e9b480daa839e418830f441",
        "version_major": 2,
        "version_minor": 0
       },
@@ -544,13 +561,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8fdcd67775ce4591b7fe21815af7241d",
+       "model_id": "f65dbbb05f62446095254f9e2fd5b993",
        "version_major": 2,
        "version_minor": 0
       },
@@ -619,13 +636,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d959d407af6408bb973836c4d584491",
+       "model_id": "5e2bc344ccaa4bf3b80c3332f47467df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -677,7 +694,6 @@
     "     'sex': which_sex}\n",
     ")\n",
     "    \n",
-    "# display(whichcountry_age, which_sex, which_age, cumulative_cases_age_graph)\n",
     "#Age section\n",
     "age_graph = output_graph(cumulative_cases_age_graph);\n",
     "age_widg = wdg.VBox([whichcountry_age, which_sex, which_age]);\n",
